unpackaged/main/default/objects/Hardware__c/Hardware__c.object-meta.xml
<CustomObject>
    <description>Hardware for D&amp;G and Indirect</description>
    <label>Hardware</label>
    <nameField>
        <displayFormat>HW-{00000}</displayFormat>
        <label>Hardware Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hardware</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>