unpackaged/main/default/objects/Hardware__c/fields/Annualized_Recurring_Fees__c.field-meta.xml
<CustomField>
    <fullName>Annualized_Recurring_Fees__c</fullName>
    <formula>(IF(ISNULL(SIM_Rental_Fee__c) , 0, SIM_Rental_Fee__c) +
IF(ISNULL(Monthly_Managed_Services_Terminal_Fee__c) , 0, Monthly_Managed_Services_Terminal_Fee__c) +
IF(ISNULL(Monthly_Terminal_Rental_Fee__c) , 0, Monthly_Terminal_Rental_Fee__c) +
IF(ISNULL(Monthly_Terminal_Service_Support_Fee__c) , 0, Monthly_Terminal_Service_Support_Fee__c) + 
IF(ISNULL( Monthly_Gateway_Per_Terminal_Fee__c ) , 0, Monthly_Gateway_Per_Terminal_Fee__c ))
* 12 *  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annualized Recurring Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>