unpackaged/main/default/objects/Hardware__c/fields/Charges__c.field-meta.xml
<CustomField>
    <fullName>Charges__c</fullName>
    <label>Hardware Charges</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service &amp; Support Recurring Fee Per Terminal</fullName>
            </value>
            <value>
                <fullName>SIM Rental Per Terminal</fullName>
            </value>
            <value>
                <fullName>Terminal Managed Services Per Terminal</fullName>
            </value>
            <value>
                <fullName>Terminal Rental Fee Per Terminal</fullName>
            </value>
            <value>
                <fullName>Terminal/PED Set-up fee per device</fullName>
            </value>
            <value>
                <fullName>Set up fee per SIM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>