unpackaged/main/default/objects/Hardware__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <description>Hardware List</description>
    <label>Item</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Region__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3CLINK RASPBERRY PI</fullName>
                <isActive>false</isActive>
                <label>3CLINK RASPBERRY PI</label>
            </value>
            <value>
                <fullName>Canada A80 7.1 (not released)</fullName>
                <isActive>false</isActive>
                <label>Canada A80 7.1 (not released)</label>
            </value>
            <value>
                <fullName>Canada B77 – Charging Base</fullName>
                <isActive>false</isActive>
                <label>Canada B77 – Charging Base</label>
            </value>
            <value>
                <fullName>Canada IM30 4G+LAN+BT+WIFI</fullName>
                <isActive>false</isActive>
                <label>Canada IM30 4G+LAN+BT+WIFI</label>
            </value>
            <value>
                <fullName>Canada L920Pro-Charging Base</fullName>
                <isActive>false</isActive>
                <label>Canada L920Pro-Charging Base</label>
            </value>
            <value>
                <fullName>Canada L920Pro-Full Base</fullName>
                <isActive>false</isActive>
                <label>Canada L920Pro-Full Base</label>
            </value>
            <value>
                <fullName>Canada PAX A30</fullName>
                <isActive>false</isActive>
                <label>Canada PAX A30</label>
            </value>
            <value>
                <fullName>Canada PAX A77</fullName>
                <isActive>false</isActive>
                <label>Canada PAX A77</label>
            </value>
            <value>
                <fullName>Canada PAX A77 (not released)</fullName>
                <isActive>false</isActive>
                <label>Canada PAX A77 (not released)</label>
            </value>
            <value>
                <fullName>Canada  PAX A80</fullName>
                <isActive>false</isActive>
                <label>Canada  PAX A80</label>
            </value>
            <value>
                <fullName>Canada PAX A920PRO</fullName>
                <isActive>false</isActive>
                <label>Canada PAX A920PRO</label>
            </value>
            <value>
                <fullName>Canada PAX A920 PRO SCAN Extra Memory</fullName>
                <isActive>false</isActive>
                <label>Canada PAX A920 PRO SCAN Extra Memory</label>
            </value>
            <value>
                <fullName>CRADLE FOR YOXIMO</fullName>
                <isActive>false</isActive>
                <label>CRADLE FOR YOXIMO</label>
            </value>
            <value>
                <fullName>DA VINCI CARD READER</fullName>
                <isActive>false</isActive>
                <label>DA VINCI CARD READER</label>
            </value>
            <value>
                <fullName>DA VINCI PINPAD</fullName>
                <isActive>false</isActive>
                <label>DA VINCI PINPAD</label>
            </value>
            <value>
                <fullName>E355 P2PE</fullName>
                <isActive>false</isActive>
                <label>E355 P2PE</label>
            </value>
            <value>
                <fullName>INGENICO DESK 5000</fullName>
                <isActive>false</isActive>
                <label>INGENICO DESK 5000</label>
            </value>
            <value>
                <fullName>INGENICO DESK 5000 HOSP</fullName>
            </value>
            <value>
                <fullName>INGENICO DESK 5000 RETAIL</fullName>
            </value>
            <value>
                <fullName>INGENICO ICT220</fullName>
                <isActive>false</isActive>
                <label>INGENICO ICT220</label>
            </value>
            <value>
                <fullName>INGENICO IPP320</fullName>
                <isActive>false</isActive>
                <label>INGENICO IPP320</label>
            </value>
            <value>
                <fullName>INGENICO IWL220</fullName>
                <isActive>false</isActive>
                <label>INGENICO IWL220</label>
            </value>
            <value>
                <fullName>Ingenico Lane</fullName>
                <isActive>false</isActive>
                <label>Ingenico Lane</label>
            </value>
            <value>
                <fullName>INGENICO LANE 3000</fullName>
            </value>
            <value>
                <fullName>Ingenico Move</fullName>
                <isActive>false</isActive>
                <label>Ingenico Move</label>
            </value>
            <value>
                <fullName>INGENICO MOVE 5000</fullName>
            </value>
            <value>
                <fullName>INGENICO PINPAD220</fullName>
                <isActive>false</isActive>
                <label>INGENICO PINPAD220</label>
            </value>
            <value>
                <fullName>INTEGRA SERVER</fullName>
                <isActive>false</isActive>
                <label>INTEGRA SERVER</label>
            </value>
            <value>
                <fullName>Legacy Terminal</fullName>
            </value>
            <value>
                <fullName>MIURA</fullName>
                <isActive>false</isActive>
                <label>MIURA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>