unpackaged/main/default/objects/Hardware__c/fields/Monthly_Gateway_Per_Terminal_Fee__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Gateway_Per_Terminal_Fee__c</fullName>
    <label>Monthly Gateway Per Terminal Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>