unpackaged/main/default/objects/Hardware__c/fields/Monthly_Managed_Services_Terminal_Fee__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Managed_Services_Terminal_Fee__c</fullName>
    <description>Monthly Recurring Managed Services fee Per Terminal (Hardware)</description>
    <label>Monthly Managed Serv per Terminal Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>