unpackaged/main/default/objects/Hardware__c/fields/Monthly_Terminal_Rental_Fee__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Terminal_Rental_Fee__c</fullName>
    <description>Monthly Recurring Rental Fee Per Terminal (Hardware)</description>
    <label>Monthly per Terminal Rental Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>