unpackaged/main/default/objects/Hardware__c/fields/Monthly_Terminal_Service_Support_Fee__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Terminal_Service_Support_Fee__c</fullName>
    <description>Monthly Recurring Service &amp; Support Fee Per Terminal (Hardware)</description>
    <label>Monthly Serv &amp; Support  Fee per Terminal</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>