unpackaged/main/default/objects/Hardware__c/fields/One_Off_Cost__c.field-meta.xml
<CustomField>
    <fullName>One_Off_Cost__c</fullName>
    <formula>IF(
    ISNULL(Sale_Price__c),  
    Terminal_PED_Docking_unit_per_device__c +  Terminal_PED_Purchase_unit_per_device__c +  P2PE_license_fee_per_device__c + Software_license_fee_per_device__c + Terminal_PED_Set_up_fee_per_device__c + Set_up_fee_per_SIM__c, 
    Terminal_PED_Docking_unit_per_device__c +  Terminal_PED_Purchase_unit_per_device__c +  P2PE_license_fee_per_device__c + Software_license_fee_per_device__c + Terminal_PED_Set_up_fee_per_device__c + Set_up_fee_per_SIM__c + Sale_Price__c
)  
* 
Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>One Off Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>