unpackaged/main/default/objects/Hardware__c/fields/P2PE_license_fee_per_device__c.field-meta.xml
<CustomField>
    <fullName>P2PE_license_fee_per_device__c</fullName>
    <label>P2PE license fee per device</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>