unpackaged/main/default/objects/Hardware__c/fields/Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>Sale_Price__c</fullName>
    <description>If Rental or Sale = Sale, user must enter terminal sale price.</description>
    <label>Sale Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>