unpackaged/main/default/objects/Hardware__c/fields/Set_up_fee_per_SIM__c.field-meta.xml
<CustomField>
    <fullName>Set_up_fee_per_SIM__c</fullName>
    <label>Set up fee per SIM</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>