unpackaged/main/default/objects/Hardware__c/fields/SIM_Rental_Fee__c.field-meta.xml
<CustomField>
    <fullName>SIM_Rental_Fee__c</fullName>
    <description>Monthly Recurring SIM Rental Fee (Hardware)</description>
    <label>Monthly SIM Rental per Terminal Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>