unpackaged/main/default/objects/Hardware__c/fields/Software_license_fee_per_device__c.field-meta.xml
<CustomField>
    <fullName>Software_license_fee_per_device__c</fullName>
    <label>Software license fee per device</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>