unpackaged/main/default/objects/Hardware__c/fields/Terminal_PED_Docking_unit_per_device__c.field-meta.xml
<CustomField>
    <fullName>Terminal_PED_Docking_unit_per_device__c</fullName>
    <label>Terminal / PED Docking per device</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>