unpackaged/main/default/objects/Hardware__c/fields/What_legacy_terminal__c.field-meta.xml
<CustomField>
    <fullName>What_legacy_terminal__c</fullName>
    <label>What legacy terminal?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>